--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "server-dev": "nodemon build/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc -w"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.17.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.11.1",
+    "express": "^4.16.3"
+  }
 }
