--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@types/express": "^4.11.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "neo4j-driver": "^1.5.0",
+    "typescript": "^2.8.3"
   }
 }
