--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@types/express": "^4.11.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "neo4j-driver": "^1.5.0",
     "typescript": "^2.8.3"
