--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@types/express": "^4.11.1",
+    "@types/twitter": "0.0.28",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "neo4j-driver": "^1.5.0",
+    "twitter": "^1.7.1",
     "typescript": "^2.8.3"
   }
 }
