--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "ts-node-dev index.ts",
     "server-dev": "nodemon build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc -w"
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "neo4j-driver": "^1.5.0",
+    "ts-node-dev": "^1.0.0-pre.21",
     "twitter": "^1.7.1",
     "typescript": "^2.8.3"
   }
