--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@types/express": "^4.11.1",
+    "@types/knex": "^0.14.14",
     "@types/twitter": "0.0.28",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "knex": "^0.14.6",
+    "mysql": "^2.15.0",
     "neo4j-driver": "^1.5.0",
     "ts-node-dev": "^1.0.0-pre.21",
     "twitter": "^1.7.1",
