--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/knex": "^0.14.14",
     "@types/twitter": "0.0.28",
     "body-parser": "^1.18.2",
+    "emoji-regex": "^6.5.1",
+    "emoji-strip": "^1.0.1",
     "express": "^4.16.3",
     "knex": "^0.14.6",
     "mysql": "^2.15.0",
