--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
   },
   "dependencies": {
     "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
     "@types/knex": "^0.14.14",
+    "@types/passport": "^0.4.5",
+    "@types/passport-twitter": "^1.0.34",
     "@types/twitter": "0.0.28",
     "body-parser": "^1.18.2",
     "emoji-regex": "^6.5.1",
     "emoji-strip": "^1.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "express-sessions": "^1.0.6",
     "knex": "^0.14.6",
     "mysql": "^2.15.0",
     "neo4j-driver": "^1.5.0",
+    "passport": "^0.4.0",
+    "passport-twitter": "^1.0.4",
     "ts-node-dev": "^1.0.0-pre.21",
     "twitter": "^1.7.1",
     "typescript": "^2.8.3"
